tests/snapshots/schema_compat__decrypted_http_response_event_line.snap
---
source: tests/schema_compat.rs
expression: line
---
{
  "t": "2025-01-15T12:00:00Z",
  "pid": 13832,
  "event": "decrypted_http_response",
  "src": "127.0.0.1:37144",
  "dst": "127.0.0.1:49270",
  "status_line": "HTTP/1.1 200 OK",
  "version": "HTTP/1.1",
  "headers_base64": "Y29udGVudC10eXBlOiB0ZXh0L2V2ZW50LXN0cmVhbTsgY2hhcnNldD11dGYtOA0KY2FjaGUtY29udHJvbDogbm8tY2FjaGUNCg==",
  "headers": [
    {
      "name": "content-type",
      "value": "text/event-stream; charset=utf-8"
    },
    {
      "name": "cache-control",
      "value": "no-cache"
    }
  ],
  "status_code": 200,
  "host": "127.0.0.1",
  "content_type": "text/event-stream; charset=utf-8",
  "content_length": 52,
  "decrypted": true,
  "body_base64": "ZXZlbnQ6IG1lc3NhZ2Vfc3RhcnQKZGF0YTogeyJ0eXBlIjoibWVzc2FnZV9zdGFydCJ9Cgo=",
  "body_format": "sse",
  "body_text": "event: message_start\ndata: {\"type\":\"message_start\"}\n\n",
  "sse_events": [
    {
      "event": "message_start",
      "data": "{\"type\":\"message_start\"}",
      "data_json": {
        "type": "message_start"
      }
    }
  ]
}
