tests/snapshots/schema_compat__disconnect_event_line.snap
---
source: tests/schema_compat.rs
expression: line
---
{
  "t": "2025-01-15T12:00:00Z",
  "pid": 1234,
  "proto": "TCP",
  "src": "10.0.0.1:49152",
  "dst": "93.184.216.34:443",
  "event": "disconnect",
  "bytes_out": 2048,
  "bytes_in": 8192,
  "scope": "PUBLIC"
}
