tests/snapshots/schema_compat__dns_response_event_line.snap
---
source: tests/schema_compat.rs
expression: line
---
{
  "t": "2025-01-15T12:00:00Z",
  "pid": 1234,
  "event": "dns_response",
  "hostname": "example.com",
  "query_type": 1,
  "query_type_name": "A",
  "status": 0,
  "status_name": "NOERROR",
  "result_ips": [
    "93.184.216.34"
  ]
}
