tests/snapshots/schema_compat__http_request_event_line.snap
---
source: tests/schema_compat.rs
expression: line
---
{
  "t": "2025-01-15T12:00:00Z",
  "pid": 1234,
  "event": "http_request",
  "src": "10.0.0.1:49152",
  "dst": "93.184.216.34:80",
  "method": "GET",
  "path": "/api/data",
  "host": "example.com"
}
