tests/snapshots/schema_compat__http_response_event_line.snap
---
source: tests/schema_compat.rs
expression: line
---
{
  "t": "2025-01-15T12:00:00Z",
  "pid": 1234,
  "event": "http_response",
  "src": "93.184.216.34:80",
  "dst": "10.0.0.1:49152",
  "status_line": "HTTP/1.1 200 OK",
  "version": "HTTP/1.1",
  "status_code": 200,
  "content_type": "application/json",
  "content_length": 1234
}
