tests/snapshots/schema_compat__output_line_error.snap
---
source: tests/schema_compat.rs
expression: output
---
{
  "type": "error",
  "message": "capture failed"
}
