tests/snapshots/schema_compat__output_line_event.snap
---
source: tests/schema_compat.rs
expression: output
---
{
  "t": "2025-01-15T12:00:00Z",
  "pid": 1234,
  "proto": "TCP",
  "src": "10.0.0.1:49152",
  "dst": "93.184.216.34:443",
  "event": "connect",
  "bytes_out": 1024,
  "bytes_in": 4096,
  "scope": "PUBLIC"
}
