tests/snapshots/schema_compat__recv_event_line.snap
---
source: tests/schema_compat.rs
expression: line
---
{
  "t": "2025-01-15T12:00:00Z",
  "pid": 5678,
  "proto": "UDP",
  "src": "8.8.8.8:53",
  "dst": "10.0.0.2:54321",
  "event": "recv",
  "bytes_out": 0,
  "bytes_in": 128
}
